--- a/util/lang/assets/proc_jp.json
+++ b/util/lang/assets/proc_jp.json
@@ -1126,5 +1126,23 @@
         "tooltip": null
       }
     }
+  },
+  "IMUCANNON": {
+    "abbr_name": "にゃんこ砲無効",
+    "full_name": "にゃんこ砲無効",
+    "tooltip": null,
+    "format": ["[(type!=127){[(type<<0){デフォルトにゃんこ砲の波動[(type>2){、}]}",
+      "(type<<1){スロウ砲[(type>4){、}]}",
+      "(type<<2){かみなり砲[(type>8){、}]}",
+      "(type<<3){水鉄砲[(type>16){、}]}",
+      "(type<<4){エンジェル砲[(type>32){、}]}",
+      "(type<<5){ブレイク砲[(type>64){と}]}",
+      "(type<<6){呪い砲}]}(type==127){にゃんこ砲}]無効"],
+    "class": {
+      "type": {
+        "name": "種類",
+        "tooltip": "+1 = デフォルトにゃんこ砲の波動、+2 = スロウ砲無効、+4 = かみなり砲無効、+8 = 水鉄砲無効、+16 = エンジェル砲無効、+32 = ブレイク砲無効、+64 = 呪い砲無効"
+      }
+    }
   }
 }
