Improve(?) Cannon immunity
Me when Iron Wall

--- a/util/lang/assets/proc_es.json
+++ b/util/lang/assets/proc_es.json
@@ -1163,13 +1163,13 @@
         "abbr_name": "Imu.Cannon",
         "full_name": "Cannon Immunity",
         "tooltip": null,
-        "format": ["Immune to [(type!=127){[(type<<0){regular cannon waves[(type>2){, }]}",
-            "(type<<1){slow beam[(type>4){, }]}",
-            "(type<<2){thunderbolt[(type>8){, }]}",
-            "(type<<3){waterblast[(type>16){, }]}",
-            "(type<<4){holy blast[(type>32){, }]}",
-            "(type<<5){breakerblast[(type>64){, and}]}",
-            "(type<<6){curseblast}]}(type==127){cannon attacks}]"],
+        "format": ["Immune to [(type!=127){[(type#1){regular cannon waves[(type>2){, }]}",
+            "(type#2){slow beam[(type>4){, }]}",
+            "(type#4){thunderbolt[(type>8){, }]}",
+            "(type#8){waterblast[(type>16){, }]}",
+            "(type#16){holy blast[(type>32){, }]}",
+            "(type#32){breakerblast[(type>64){, and}]}",
+            "(type#64){curseblast}]}(type==127){cannon attacks}]"],
         "class": {
             "type": {
                 "name": "type",
