--- a/util/lang/assets/proc_jp.json
+++ b/util/lang/assets/proc_jp.json
@@ -1132,12 +1132,12 @@
     "full_name": "にゃんこ砲無効",
     "tooltip": null,
     "format": ["[(type!=127){[(type#1){デフォルトにゃんこ砲の波動[(type>2){、}]}",
-      "(type#2){スロウ砲[(type>4){、}]}",
-      "(type#4){かみなり砲[(type>8){、}]}",
-      "(type#8){水鉄砲[(type>16){、}]}",
-      "(type#16){エンジェル砲[(type>32){、}]}",
-      "(type#32){ブレイク砲[(type>64){と}]}",
-      "(type#64){呪い砲}]}(type==127){にゃんこ砲}]無効"],
+      "(type&2>0){スロウ砲[(type>4){、}]}",
+      "(type&4>0){かみなり砲[(type>8){、}]}",
+      "(type&8>0){水鉄砲[(type>16){、}]}",
+      "(type&16>0){エンジェル砲[(type>32){、}]}",
+      "(type&32>0){ブレイク砲[(type>64){と}]}",
+      "(type&64>0){呪い砲}]}(type==127){にゃんこ砲}]無効"],
     "class": {
       "type": {
         "name": "種類",
