--- a/util/lang/assets/proc_es.json
+++ b/util/lang/assets/proc_es.json
@@ -1163,16 +1163,22 @@
         "abbr_name": "Imu.Cannon",
         "full_name": "Cannon Immunity",
         "tooltip": null,
-        "format": ["Immune to [(type!=127){[(type#1){regular cannon waves[(type>2){, }]}",
+        "format": ["[(mult==100){Immune}(mult<100&mult>0){Resistant}(mult<0){Weak}] to ",
+            "[(type!=127){[(type&1>0){regular cannon waves[(type>2){, }]}",
             "(type&2>0){slow beam[(type>4){, }]}",
             "(type&4>0){thunderbolt[(type>8){, }]}",
             "(type&8>0){waterblast[(type>16){, }]}",
             "(type&16>0){holy blast[(type>32){, }]}",
             "(type&32>0){breakerblast[(type>64){, and}]}",
-            "(type&64>0){curseblast}]}(type==127){cannon attacks}]"],
+            "(type&64>0){curseblast}]}(type==127){cannon attacks}]",
+            "[(mult!=100){ [(mult>0){Reduces}(mult<0){Increases}] damage taken and procs by (_abs(mult))%}]"],
         "class": {
+            "mult": {
+                "name": "porcentaje",
+                "tooltip": null
+            },
             "type": {
-                "name": "type",
+                "name": "categoria",
                 "tooltip": "+1 for regular cannon immunity, +2 for slow beam immunity, +4 for thunderbolt immunity, +8 for waterblast immunity, +16 for holy blast immunity, +32 for breakerblast immunity, +64 for curseblast immunity"
             }
         }
