--- a/util/lang/assets/proc_jp.json
+++ b/util/lang/assets/proc_jp.json
@@ -1129,16 +1129,21 @@
   },
   "IMUCANNON": {
     "abbr_name": "にゃんこ砲無効",
-    "full_name": "にゃんこ砲無効",
+    "full_name": "にゃんこ砲無効/耐性",
     "tooltip": null,
-    "format": ["[(type!=127){[(type#1){デフォルトにゃんこ砲の波動[(type>2){、}]}",
+    "format": ["[(type!=127){[(type&1>0){デフォルトにゃんこ砲の波動[(type>2){、}]}",
       "(type&2>0){スロウ砲[(type>4){、}]}",
       "(type&4>0){かみなり砲[(type>8){、}]}",
       "(type&8>0){水鉄砲[(type>16){、}]}",
       "(type&16>0){エンジェル砲[(type>32){、}]}",
       "(type&32>0){ブレイク砲[(type>64){と}]}",
-      "(type&64>0){呪い砲}]}(type==127){にゃんこ砲}]無効"],
+      "(type&64>0){呪い砲}]}(type==127){にゃんこ砲}]",
+      "[(mult==100){無効}(mult<100&mult>0){(mult)%耐性}(mult<0){(_abs(mult))%脆弱性}]"],
     "class": {
+      "mult": {
+        "name": "割合",
+        "tooltip": null
+      },
       "type": {
         "name": "種類",
         "tooltip": "+1 = デフォルトにゃんこ砲の波動、+2 = スロウ砲無効、+4 = かみなり砲無効、+8 = 水鉄砲無効、+16 = エンジェル砲無効、+32 = ブレイク砲無効、+64 = 呪い砲無効"
