--- a/util/lang/assets/proc.json
+++ b/util/lang/assets/proc.json
@@ -1191,7 +1191,7 @@
         "abbr_name": "2x Money",
         "full_name": "Money Multiplier",
         "tooltip": null,
-        "format": "[(mult>0){Greedy Sweep}(mult<0){Theft}] (_left)(_abs(mult))% [(mult>0){more}(mult<0){less}] money received upon defeating enemies(_right)",
+        "format": "[(mult>0){Extra Money}(mult<0){Theft}] (_left)(_abs(mult))% [(mult>0){more}(mult<0){less}] money received upon defeating enemies(_right)",
         "class": {
             "mult": {
                 "name": "percent",
