--- a/util/lang/assets/proc_kr.json
+++ b/util/lang/assets/proc_kr.json
@@ -1157,7 +1157,7 @@
         "abbr_name": "추가 머니",
         "full_name": "추가 머니",
         "tooltip": "적을 처지 시 얻는 돈을 퍼센트로 더 혹은 덜 획득하게 만드는 능력입니다",
-        "format": "[(mult>0){추가 머니}(mult<0){머니 획득 감소}] (_left)(적 처치 시 돈을 _abs(mult))% 만큼 [(mult>0){더}(mult<0){덜}] 획득(_right)",
+        "format": "[(mult>0){추가 머니}(mult<0){머니 획득 감소}] (_left)적 처치 시 돈을 (_abs(mult))% 만큼 [(mult>0){더}(mult<0){덜}] 획득(_right)",
         "class": {
             "mult": {
                 "name": "퍼센트",
