--- a/util/lang/assets/proc_kr.json
+++ b/util/lang/assets/proc_kr.json
@@ -1178,10 +1178,10 @@
         }
     },
     "BSTHUNT": {
-        "abbr_name": "초수 헌터",
-        "full_name": "초수 헌터",
+        "abbr_name": "초수 특효",
+        "full_name": "초수 특효",
         "tooltip": "초수 특성을 가진 적에게 추가적인 데미지를 가하고 감소된 데미지를 입습니다. 확률적으로 공격 무효도 발동됩니다",
-        "format": "초수 킬러 (_left)피격 시 데미지 x0.6, 공격 시 데미지 x2.5[(prob>0){로 적용되고, (prob)% 확률로 (_dispTime(time)) 동안 공격 무효}](_right)",
+        "format": "초수 특효 (_left)피격 시 데미지 x0.6, 공격 시 데미지 x2.5[(prob>0){로 적용되고, (prob)% 확률로 (_dispTime(time)) 동안 공격 무효}](_right)",
         "class": {
             "type.active": {
                 "name": "초수 특효",
