--- a/util/lang/assets/proc.json
+++ b/util/lang/assets/proc.json
@@ -1213,12 +1213,12 @@
     },
     "BSTHUNT": {
         "abbr_name": "BST Kill",
-        "full_name": "Beast Hunter",
+        "full_name": "Behemoth Slayer",
         "tooltip": null,
-        "format": "Super Beast Hunter (_left)Deals 2.5x damage[(prob>0){, }(prob==0){ and }]only takes 0.6x damage[(prob>0){, and (prob)% chance to dodge their attacks for (_dispTime(time))}](_right)",
+        "format": "Behemoth Slayer (_left)Deals 2.5x damage[(prob>0){, }(prob==0){ and }]only takes 0.6x damage[(prob>0){, and (prob)% chance to dodge their attacks for (_dispTime(time))}](_right)",
         "class": {
             "type.active": {
-                "name": "Stronger Vs. Beast",
+                "name": "Stronger Vs. Behemoth",
                 "tooltip": null
             },
             "prob": {
