Improve Stop Time by adding intensity
Doesn't sucks as much now, also fixed custom followup chance

--- a/util/lang/assets/proc_es.json
+++ b/util/lang/assets/proc_es.json
@@ -460,6 +460,10 @@
             "time": {
                 "name": "duración",
                 "tooltip": null
+            },
+            "intensity": {
+                "name": "intensity",
+                "tooltip": "The power of the timestop. If the intensity is lower than the duration, there will be certain intervals where units will be able to move. Set to negative to speed up entities with time stop immunity"
             }
         }
     },
