--- a/util/lang/assets/proc.json
+++ b/util/lang/assets/proc.json
@@ -451,7 +451,7 @@
         "abbr_name": "time",
         "full_name": "Stop Time",
         "tooltip": "Unlike Stop, this ability freezes everything including waves, money gain, cat and enemy cool down, etc",
-        "format": "(prob)% chance to stop time for (_dispTime(time))",
+        "format": "(prob)% chance to [(inten>0){stop}(inten<0){speed up}] time for (_dispTime(time)), with a intensity of (_abs(intensity))",
         "class": {
             "prob": {
                 "name": "chance",
@@ -460,6 +460,10 @@
             "time": {
                 "name": "duration",
                 "tooltip": null
+            },
+            "intensity": {
+                "name": "intensity",
+                "tooltip": "The power of the timestop. If the intensity is lower than the duration, there will be certain intervals where units will be able to move. Set to negative to speed up entities with time stop immunity"
             }
         }
     },
