--- a/util/lang/assets/proc_jp.json
+++ b/util/lang/assets/proc_jp.json
@@ -471,9 +471,10 @@
       "(type.on_hit){各ターゲットの命中時に召喚された(dis)の範囲が1つ離れる}",
       "(type.on_kill){対象が倒れるたびに1回召喚(dis)の範囲が離れる}]",
       "[(type.same_health){ (_left)召喚されたエンティティはこのエンティティが持つヘルスと同じになる(_right)}]",
+      "[(type.bond_hp){ (_left)召喚獣のHPと各召喚獣のHPがバインドされます(_right)}]",
       "[(type.ignore_limit){ (_left)ステージのエンティティの制限によって制限されない(_right)}]",
-      "(_left)召喚されたエンティティは[(!type.random_layer){このエンティティと同じレイヤーになる}",
-      "(type.random_layer){ランダムなレイヤーに存在する}](_right) ",
+      "(_left)召喚されたエンティティは[(min_layer==max_layer){[(min_layer==-1){このエンティティと同じレイヤーになる}(min_layer!=-1){(min_layer)レイヤーになる}]}",
+      "(min_layer!=max_layer){(min_layer)～(max_layer)のランダムなレイヤーに存在する}](_right) ",
       "(_left)召喚は[(type.anim_type==1){ワープの}(type.anim_type>=2){埋葬終了の}]",
       "[(type.anim_type==3){(_left)+埋葬の無効化(_right)}]アニメーションを表示[(type.anim_type!=0){する}(type.anim_type==0){しません}](_right)"
     ],
@@ -493,6 +494,18 @@
       "mult": {
         "name": "強化倍率",
         "tooltip": "召喚された実体の強化倍率、デフォルトではこのエンティティの強化倍率×入力値の強化倍率。固定倍率を有効にした場合は入力値の強化倍率"
+      },
+      "time": {
+        "name": "遅延",
+        "tooltip": "この召喚での遅延"
+      },
+      "min_layer": {
+        "name": "最小レイヤー",
+        "tooltip": "召喚された実体が置かれる最小レイヤーを指定します。この実体と同じレイヤーを使用する場合は-1に設定します。"
+      },
+      "max_layer": {
+        "name": "最大レイヤー",
+        "tooltip": "召喚された実体が置かれる最大レイヤーを指定します。この実体と同じレイヤーを使用する場合は-1に設定します。"
       },
       "type.anim_type": {
         "name": "召喚アニメ",
@@ -520,9 +533,9 @@
         "name": "同じ体力",
         "tooltip": "召喚された実体を召喚時のこの実体と同じ体力を持つように設定します。"
       },
-      "type.random_layer": {
-        "name": "ランダムレイヤー",
-        "tooltip": "デフォルトでは召喚された実体はこの実体と同じレイヤーを持ちますが、これを有効にすると、レイヤーがランダム化されます。"
+      "type.bond_hp": {
+        "name": "魂の絆",
+        "tooltip": "発動時、召喚体が受ける全てのダメージとデバフを召喚者が受けるようになる"
       },
       "type.on_hit": {
         "name": "当たる毎に",
@@ -539,10 +552,6 @@
           "倒された敵ごとに召喚し、距離の原点は敵の位置に設定されます。",
           "範囲攻撃では複数体の召喚が可能です。"
         ]
-      },
-      "time": {
-        "name": "遅延",
-        "tooltip": "この召喚での遅延"
       },
       "form": {
         "name": "フォーム",
