--- a/util/lang/assets/proc_kr.json
+++ b/util/lang/assets/proc_kr.json
@@ -454,8 +454,8 @@
             "(type.on_kill&!type.on_hit){상대를 죽일 때마다}]",
             " 상대로부터 거리 (dis) [(dis<0){뒤}(dis>=0){앞}]에서 }]",
             "[(type.ignore_limit){스테이지 제한에 상관없이}] ",
-            "[(!type.random_layer){소환자의 레이어와 같은 곳에}",
-            "(type.random_layer){렌덤한 레이어에}] ",
+            "[(min_layer==max_layer){소환자의 레이어와 같은 곳에}",
+            "(min_layer!=max_layer){렌덤한 레이어에}] ",
             "[(type.same_health){소환자와 같은 체력으로} ]",
             "[(type.anim_type==0){평범하게 소환}(type.anim_type==1){워프 에니메이션과 함께 소환}(type.anim_type>=2){버로우 애니메이션과 함께 소환}](_right)"
         ],
@@ -472,9 +472,25 @@
                 "name": "거리",
                 "tooltip": "소환자로부터의 거리를 정합니다. \"매 공격마다\" 혹은 \"매 킬마다\" 가 활성화 되어있으면 공격받은 상대로부터의 거리입니다"
             },
+            "max_dis": {
+                "name": "max distance",
+                "tooltip": "Max distance from this entity by default, or from the target if on hit or on kill is enabled"
+            },
             "mult": {
                 "name": "배율",
                 "tooltip": "소환되는 상대의 배율을 정합니다. 적을 위한 값이며 유닛은 따르지 않습니다. \"고정된 버프\"를 활성화 시키면 소환자의 배율에 상대적으로 소환됩니다"
+            },
+            "time": {
+                "name": "지연 시간",
+                "tooltip": "정해진 시간 뒤에 개체가 소환됩니다"
+            },
+            "min_layer": {
+                "name": "min layer",
+                "tooltip": "lowest layer the summoned entity will be at. Set to -1 to use same layer as this entity"
+            },
+            "max_layer": {
+                "name": "max layer",
+                "tooltip": "highest layer the summoned entity will be at. Set to -1 to use same layer as this entity"
             },
             "type.anim_type": {
                 "name": "소환 애니메이션",
@@ -499,9 +515,9 @@
                 "name": "같은 체력으로 소환",
                 "tooltip": "소환될 상대가 소환자와 같은 체력으로 소환됩니다"
             },
-            "type.random_layer": {
-                "name": "랜덤 레이어",
-                "tooltip": "해당 특성이 활성화 되어있으면 소환자의 레이어를 따르지 않고 랜덤한 레이어에 소환됩니다"
+            "type.bond_hp": {
+                "name": "Bond health",
+                "tooltip": "When activated, the summoner will receive all damage and procs the summoned entity receives"
             },
             "type.on_hit": {
                 "name": "매 공격마다",
@@ -518,10 +534,6 @@
                     " 해당 특성을 활성화하면 죽게 되는 타겟 앞에 특정된 거리 앞에 소환되게 됩니다.",
                     " 소환자가 범위 공격을 가지고 있으면 한번에 여러마리의 개체를 소환할 수 있습니다"
                 ]
-            },
-            "time": {
-                "name": "지연 시간",
-                "tooltip": "정해진 시간 뒤에 개체가 소환됩니다"
             }
         }
     },
