update kr summon desc

--- a/util/lang/assets/proc_kr.json
+++ b/util/lang/assets/proc_kr.json
@@ -447,7 +447,7 @@
         "full_name": "소환",
         "tooltip": "특정 발동 조건을 만족하면 일정 시간가 거리에 정해진 아군을 소환합니다. 유닛의 경우, 첫번째 형태로만 소환됩니다",
         "format": [
-            "(prob)% 확률로 (_dispTime(time)) 후에 [(!type.on_kill&!type.on_hit){거리 (dis) [(dis<0){뒤}(dis>=0){앞}]에서}] [(_isEnemy){(mult)% 배율로}] (_entity(id)) 소환 (_left)",
+            "(prob)% 확률로 (_dispTime(time)) 후에 [(!type.on_kill&!type.on_hit){거리 (dis)~(max_dis) [(dis<0){뒤}(dis>=0){앞}]에서}] [(_isEnemy){(mult)% 배율로}] (_entity(id)) 소환 (_left)",
             "[(!type.fix_buff&_isEnemy){소환자의 배율에 상대적으로 소환되고}] ",
             "[(type.anim_type==3){ 버로우 능력을 지우고 }]",
             "[(type.on_hit|type.on_kill){[(type.on_hit){매 공격마다}",
@@ -455,8 +455,8 @@
             " 상대로부터 거리 (dis) [(dis<0){뒤}(dis>=0){앞}]에서 }]",
             "[(type.ignore_limit){스테이지 제한에 상관없이}] ",
             "[(min_layer==max_layer){소환자의 레이어와 같은 곳에}",
-            "(min_layer!=max_layer){렌덤한 레이어에}] ",
-            "[(type.same_health){소환자와 같은 체력으로} ]",
+            "(min_layer!=max_layer){렌덤한 레이어 (min_layer)~(max_layer) 사이에}] ",
+            "[(type.same_health){소환자와 같은 체력[(type.bond_hp){이고 소환자화 연동된 상태로}(!type.bond_hp){으로}] ]",
             "[(type.anim_type==0){평범하게 소환}(type.anim_type==1){워프 에니메이션과 함께 소환}(type.anim_type>=2){버로우 애니메이션과 함께 소환}](_right)"
         ],
         "class": {
@@ -469,12 +469,12 @@
                 "tooltip": "소환할 상대를 정합니다"
             },
             "dis": {
-                "name": "거리",
-                "tooltip": "소환자로부터의 거리를 정합니다. \"매 공격마다\" 혹은 \"매 킬마다\" 가 활성화 되어있으면 공격받은 상대로부터의 거리입니다"
+                "name": "최소 거리",
+                "tooltip": "소환자로부터의 최소 거리를 정합니다. \"매 공격마다\" 혹은 \"매 킬마다\" 가 활성화 되어있으면 공격받은 상대로부터의 거리입니다"
             },
             "max_dis": {
-                "name": "max distance",
-                "tooltip": "Max distance from this entity by default, or from the target if on hit or on kill is enabled"
+                "name": "최대 거리",
+                "tooltip": "소환자로부터의 최대 거리를 정합니다. \"매 공격마다\" 혹은 \"매 킬마다\" 가 활성화 되어있으면 공격받은 상대로부터의 거리입니다"
             },
             "mult": {
                 "name": "배율",
@@ -485,12 +485,12 @@
                 "tooltip": "정해진 시간 뒤에 개체가 소환됩니다"
             },
             "min_layer": {
-                "name": "min layer",
-                "tooltip": "lowest layer the summoned entity will be at. Set to -1 to use same layer as this entity"
+                "name": "최소 레이어",
+                "tooltip": "개체가 소환될 최소 레이어 값입니다. -1로 설정하여 항상 소환자의 레이어와 같은 레이어에서 소환되도록 만들 수 있습니다"
             },
             "max_layer": {
-                "name": "max layer",
-                "tooltip": "highest layer the summoned entity will be at. Set to -1 to use same layer as this entity"
+                "name": "최대 레이어",
+                "tooltip": "개체가 소환될 최대 레이어 값입니다. -1로 설정하여 항상 소환자의 레이어와 같은 레이어에서 소환되도록 만들 수 있습니다"
             },
             "type.anim_type": {
                 "name": "소환 애니메이션",
@@ -516,8 +516,8 @@
                 "tooltip": "소환될 상대가 소환자와 같은 체력으로 소환됩니다"
             },
             "type.bond_hp": {
-                "name": "Bond health",
-                "tooltip": "When activated, the summoner will receive all damage and procs the summoned entity receives"
+                "name": "동기화",
+                "tooltip": "소환자가 소환된 개체가 데이미지를 입거나 디버프에 걸리면 같은 디버프와 데미지를 입게 됩니다"
             },
             "type.on_hit": {
                 "name": "매 공격마다",
