update jp/kr animation type json

--- a/util/lang/assets/animation_type_jp.json
+++ b/util/lang/assets/animation_type_jp.json
@@ -12,7 +12,8 @@
     "BURROW_DOWN": "潜る",
     "ENTER": "到着",
     "ATK": "攻撃",
-    "WALK": "移動"
+    "WALK": "移動",
+    "SOUL": "魂"
   },
   "VolcEff": {
     "DURING": "中",
