update proc.json for warp

--- a/util/lang/assets/proc.json
+++ b/util/lang/assets/proc.json
@@ -129,9 +129,10 @@
         "tooltip": null,
         "format": [
             "(prob)% chance to warp target for (_dispTime(time)) to a distance",
-            "[(dis_0==dis_1){ of (_abs(dis_0))[(dis_0<0){ forward}(dis_0>0){ backward}]}]",
-            "[(dis_0!=dis_1){ between (_abs(dis_0))[(dis_0<0){ forward}(dis_0>0){ backward}]}]",
-            "[(dis_0!=dis_1){ to (_abs(dis_1))[(dis_1<0){ forward}(dis_1>0){ backward}]}]"
+            "[(dis_0==dis_1){ of (_abs(dis_0))[(dis_0<0){ forward}(dis_0>=0){ backward}]}",
+            "(dis_0!=dis_1){ between ",
+            "[(dis_0*dis_1>=0){(_abs(dis_0))~(_abs(dis_1)) [(dis_0<0){ forward}(dis_0>=0){ backward}]}",
+            "(dis_0*dis_1<0){(_abs(dis_0))[(dis_0<0){ forward}(dis_0>=0){ backward}] to (_abs(dis_1))[(dis_1<0){ forward}(dis_1>=0){ backward}]}]}]"
         ],
         "class": {
             "prob": {
